# rxtx

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/mrpark/com/port/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/mrpark/com/port/: Constance.java  DevicesActivity.java  MainActivity.java  MyApplication.java  PortAdapter.java  PortItem.java  SerialPortFinder.java  UsbBroadCast.java
app/src/main/res/layout/: activity_devices.xml  activity_main.xml  item_port.xml
app/src/main/res/values/: strings.xml
app/src/test/java/mrpark/com/port/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
